updated name to cde-helper

--- a/env/.env.dev
+++ b/env/.env.dev
@@ -2,15 +2,38 @@
 
 # Built-in environment variables
 TEAMSFX_ENV=dev
-APP_NAME_SUFFIX=dev
+APP_NAME_SUFFIX=
 
 # Updating AZURE_SUBSCRIPTION_ID or AZURE_RESOURCE_GROUP_NAME after provision may also require an update to RESOURCE_SUFFIX, because some services require a globally unique name across subscriptions/resource groups.
-AZURE_SUBSCRIPTION_ID=
-AZURE_RESOURCE_GROUP_NAME=
-RESOURCE_SUFFIX=
+AZURE_SUBSCRIPTION_ID=c693cbbc-bce9-415c-b873-faee66bb0969
+AZURE_RESOURCE_GROUP_NAME=CDEHelperRG
+RESOURCE_SUFFIX=cdehelper-web
 
 # Generated during provision, you can also add your own variables.
-BOT_ID=
-TEAMS_APP_ID=
-BOT_AZURE_APP_SERVICE_RESOURCE_ID=
-BOT_DOMAIN=
+#BOT_ID=
+TEAMS_APP_ID=fb77321b-968a-4c70-a0ac-45ccbfff1415
+BOT_AZURE_APP_SERVICE_RESOURCE_ID=/subscriptions/c693cbbc-bce9-415c-b873-faee66bb0969/resourceGroups/CDEHelperRG/providers/Microsoft.Web/sites/cdehelper-web
+BOT_DOMAIN=cdehelper-web.azurewebsites.net
+
+# Generated during provision, you can also add your own variables.
+BOT_ID=516a61cf-61e6-4bfe-a7d4-86917a39ec5d
+BOT_OBJECT_ID=f5c41479-7da5-499b-8b94-8ec6a0e9372c
+#TEAMS_APP_ID=818ef968-cb7a-46d9-934f-6d7003b07d74
+#BOT_DOMAIN=ezcode.ngrok.io
+#BOT_ENDPOINT=https://ezcode.ngrok.io
+TEAMS_APP_TENANT_ID=6f423eb7-7932-4e19-ae14-fa375038681b
+
+# allow all pod-helper logs
+DEBUG=cde-helper:*
+
+# EntraId
+TENANT_ID=6f423eb7-7932-4e19-ae14-fa375038681b
+CLIENT_ID=d5be9481-3999-4101-b0a2-99834cf4c1ad
+SCOPES=https://app.vssps.visualstudio.com/.default
+PROJECT_URL=https://dev.azure.com/ezcode-repo/CDE02
+
+#M365PODDevOpsDB connection
+COSMOSDBENDPOINT="https://tachen-contoso-cosmosdb-serverless.documents.azure.com:443/"
+COSMOSDBID="M365PODDevOpsDB"
+M365_TITLE_ID=U_83ba5d5c-55aa-109d-8e82-d747d0f23a31
+M365_APP_ID=611becb4-0146-4087-b41d-5f4286460fce
