--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "podhelper",
+    "name": "cde-helper",
     "version": "1.0.0",
     "description": "Microsoft Teams Toolkit message extension search sample",
     "engines": {
