Updated github CI/CD yaml Update settings.production.json to enable some areas.

--- a/env/.env.dev
+++ b/env/.env.dev
@@ -37,3 +37,4 @@ COSMOSDBENDPOINT="https://tachen-contoso-cosmosdb-serverless.documents.azure.com
 COSMOSDBID="M365PODDevOpsDB"
 M365_TITLE_ID=U_83ba5d5c-55aa-109d-8e82-d747d0f23a31
 M365_APP_ID=611becb4-0146-4087-b41d-5f4286460fce
+TEAMS_APP_PUBLISHED_APP_ID=7525e197-c93c-4c17-b605-04c7414f8845
