--- a/env/.env.dev
+++ b/env/.env.dev
@@ -33,8 +33,9 @@ SCOPES=https://app.vssps.visualstudio.com/.default
 PROJECT_URL=https://dev.azure.com/ezcode-repo/CDE02
 
 #M365PODDevOpsDB connection
-COSMOSDBENDPOINT="https://tachen-contoso-cosmosdb-serverless.documents.azure.com:443/"
+COSMOSDBENDPOINT="https://tachen-contoso-cosmosdb01-serverless.documents.azure.com:443/"
 COSMOSDBID="M365PODDevOpsDB"
+#lastest side load title_id: U_6c84c276-8daa-7f82-a6c6-70861e93656a
 M365_TITLE_ID=U_83ba5d5c-55aa-109d-8e82-d747d0f23a31
 M365_APP_ID=611becb4-0146-4087-b41d-5f4286460fce
 TEAMS_APP_PUBLISHED_APP_ID=7525e197-c93c-4c17-b605-04c7414f8845
