--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "cde-helper",
-    "version": "1.0.0",
+    "version": "1.0.3",
     "description": "Microsoft Teams Toolkit message extension search sample",
     "engines": {
         "node": "16 || 18 || 20"
@@ -18,11 +18,14 @@
         "build-old": "tsc --build",
         "build-old1": "tsc --build && copyfiles ./public/*.html lib/",
         "start": "node ./dist/index.js",
+        "start-local": "env-cmd --silent -f .localConfigs npm run start",
         "test-old": "echo \"Error: no test specified\" && exit 1",
         "watch-old": "nodemon --exec \"npm run start\"",
         "watch": "webpack --watch --mode development",
         "build:dev": "webpack --mode development",
         "build:prod": "webpack --mode production",
+        "report": "webpack --profile --json > stats.json; webpack-bundle-analyzer ./stats.json",
+        "report:client": "webpack --profile --config webpack.client.config.js --json > stats.json; webpack-bundle-analyzer ./stats.json",
         "outlook:startlocal": "office-addin-debugging start appPackage/build/local/manifest.json",
         "outlook:stoplocal": "office-addin-debugging stop appPackage/build/local/manifest.json",
         "outlook:startdev": "office-addin-debugging start appPackage/build/dev/manifest.json",
@@ -72,6 +75,7 @@
         "ts-node": "^10.4.0",
         "typescript": "^5.2.2",
         "webpack": "^5.76.3",
+        "webpack-bundle-analyzer": "^4.10.2",
         "webpack-cli": "^5.0.1",
         "webpack-dev-server": "4.13.1",
         "webpack-node-externals": "^3.0.0"
